# egyok_hrms

./: README.md  pyproject.toml
.github/workflows/: ci.yml
egyok_hrms/: hooks.py  install.py  modules.txt  setup.py  uninstall.py
egyok_hrms/attendance/doctype/attendance/: attendance.js  attendance.json  attendance.py  test_attendance.py
egyok_hrms/attendance/doctype/attendance_checker/: attendance_checker.js  attendance_checker.json  attendance_checker.py  test_attendance_checker.py
egyok_hrms/attendance/doctype/import_log_details/: import_log_details.json  import_log_details.py
egyok_hrms/attendance/doctype/import_logs/: import_logs.js  import_logs.json  import_logs.py  test_import_logs.py
egyok_hrms/attendance/doctype/leave_type/: leave_type.js  leave_type.json  leave_type.py  test_leave_type.py
egyok_hrms/attendance/doctype/overtime/: overtime.js  overtime.json  overtime.py  test_overtime.py
egyok_hrms/attendance/doctype/request_shift/: request_shift.js  request_shift.json  request_shift.py  test_request_shift.py
egyok_hrms/attendance/doctype/shift_schedule/: shift_schedule.js  shift_schedule.json  shift_schedule.py  test_shift_schedule.py
egyok_hrms/attendance/doctype/shift_type/: shift_type.js  shift_type.json  shift_type.py  test_shift_type.py
egyok_hrms/attendance/doctype/shift_type_details/: shift_type_details.json  shift_type_details.py
egyok_hrms/controllers/: transaction.js
egyok_hrms/fixtures/: leave_type.json  payroll_earning_and_deduction_settings.json
egyok_hrms/public/js/: egyok_hrms.bundle.js
(+12 files in other folders)
